--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,14 +1,1 @@
-# This file is auto-generated during the composer install
-parameters:
-    database_driver: pdo_mysql
-    database_host: 127.0.0.1
-    database_port: null
-    database_name: symfony
-    database_user: root
-    database_password: null
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
-    locale: en
-    secret: b678b36a7a38918f88317ad0174de32c8e712bb7
+{ parameters: { database_driver: pdo_mysql, database_host: 127.0.0.1, database_port: null, database_name: symfony, database_user: root, database_password: '0000', mailer_transport: smtp, mailer_host: 127.0.0.1, mailer_user: null, mailer_password: null, locale: en, secret: b678b36a7a38918f88317ad0174de32c8e712bb7, database_path: null } }
