--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "browser-sync": "^2.5.0",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-if": "^1.2.5",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
-    "gulp-uglify": "^1.1.0"
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "minimist": "^1.1.1"
   }
 }
