--- a/src/Portfolio/UserBundle/Resources/config/routing.yml
+++ b/src/Portfolio/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 portfolio_user_homepage:
-    path:     /hello/{name}
+    path:     /hello
     defaults: { _controller: PortfolioUserBundle:Default:index }
+portfolio_user_test:
+    path:     /test
+    defaults: { _controller: PortfolioUserBundle:Default:test }
